--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,18 @@ h1 {
 	color: red;
 }
 
-.video, .metadata {
+.video-box, .metadata {
 	width: 50%;
 	text-align: center;
 }
 
-.video {
+.video-box {
 	float: left;
+}
+
+.video {
+	height: 640px;
+	width: 640px;
 }
 
 .metadata {
