--- a/css/styles.css
+++ b/css/styles.css
@@ -91,10 +91,12 @@ body {
 	text-align: center;
 }
 
-.myMap {
+#myMap {
 	position: relative;
-	width: 500px;
+	width: 100%;
 	height: 300px;
+	margin: 0;
+	display: block;
 }
 
 .controls {
