--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #000;
+	background-color: #111;
 	color: #fff;
 	font-family: sans-serif;
 }
@@ -22,6 +22,7 @@ body {
 .flexitem {
 	-webkit-flex: 1;
     flex: 1;
+    position: relative;
 }
 
 .header {
@@ -60,12 +61,17 @@ body {
 
 .caption {
 	height: 3em;
-	padding-bottom: 2em; 
+	border: 1px solid #000;
+	background-color: #333;
+	border-radius: 3px;
+	box-shadow: 0 1px 0 rgba(255,255,255,0.16),inset 1px 1px rgba(255,255,255,0.12);
+	padding: 1em 1% 1em 0; 
 }
 
 .caption .fa-quote-left {
 	width: 20%;
 	text-align: center;
+	color: #666;
 }
 
 .caption p {
@@ -79,26 +85,66 @@ body {
 
 .timestamp, .credit {
 	text-align: right;
+	color: #666;
 }
 
 .credit a {
-	color: #fff;
+	color: #999;
+}
+
+.location-group {
+	border: 1px solid #000;
+	background-color: #333;
+	border-radius: 3px;
+	box-shadow: 0 1px 0 rgba(255,255,255,0.16),inset 1px 1px rgba(255,255,255,0.12);
 }
 
 .location {
+	padding: .5em 0;
+	border-bottom: 1px solid #000;
+	border-radius: 3px;
+	box-shadow: 0 1px 0 rgba(255,255,255,0.16);
+}
+
+.location .fa-map-marker {
+	width: 20%;
 	text-align: center;
+	color: #666;
+}
+
+.location-text {
+	display: inline-block;
+	float: right;
+	width: 80%;
+	position: relative;
+	top: 50%;
+	transform: translateY(50%);
+}
+
+hr {
+	padding: 0;
+	margin: 0;
 }
 
 #myMap {
 	position: relative;
-	width: 100%;
-	height: 300px;
+	width: 98%;
+	height: 270px;
 	margin: 0;
 	display: block;
 }
 
 .controls {
+	width: 100%;
 	text-align: center;
+}
+
+.buttons {
+	display: inline-block;
+	border: 1px solid #000;
+	background-color: #333;
+	border-radius: 3px;
+	box-shadow: 0 1px 0 rgba(255,255,255,0.08),inset 1px 1px rgba(255,255,255,0.06);
 }
 
 button:focus {
@@ -106,11 +152,14 @@ button:focus {
 }
 
 .next, .prev, .pause-play {
-	background-color: #000;
+	float: left;
 	color: #fff;
-	border: 1px solid #fff;
-	border-radius: 1em;
-	padding: 1em 4em;
+	padding: 1em 3em;
+	box-shadow: 0 1px 0 rgba(255,255,255,0.16),inset 1px 1px rgba(255,255,255,0.12);
+}
+
+.prev, .pause-play {
+	border-right: 1px solid #000;
 }
 
 .pause-play i {
@@ -120,9 +169,9 @@ button:focus {
 .music-player {
 	background-color: #222;
 	height: 4em;
-	position: fixed;
-	bottom: 0;
 	width: 100%;
+	position: absolute;
+	bottom: 0;
 }
 
 .music-player .container {
