--- a/css/styles.css
+++ b/css/styles.css
@@ -30,10 +30,6 @@ body {
 	margin: 3em 0;
 }
 
-.content {
-	
-}
-
 .container {
 	margin: 0 10%;
 }
@@ -228,6 +224,7 @@ button:focus {
 
 .music-text {
 	padding-left: 5%;
+	text-align: left;
 }
 
 .title {
