--- a/css/styles.css
+++ b/css/styles.css
@@ -265,17 +265,25 @@ button:focus {
 }
 
 .home-page, .location-page, .music-page, .about-page {
-	display: none;
-	position: relative;
+/*	display: none;
+*/	position: relative;
+	height: 100%;
 	outline: 1px solid red;
-}
-
-.location-page p {
-	height: 90%;
 }
 
 .active-page {
 	display: initial;
+}
+
+.content-box {
+	height: 90%;
+/*	outline: 1px solid red;
+*/	position: relative;
+	top: -90%;
+}
+
+.location-page p, .music-page p, .about-page p {
+	outline: 1px solid red;
 }
 
 .music-player {
@@ -369,7 +377,7 @@ button:focus {
 	box-shadow: -1px 0px 0 #000;
 	display: inline;
 	float: right;
-	font-size: 2.5rem;
+	font-size: 2rem;
 	color: inherit;
 	position: relative;
 	top: 50%;
