--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,26 @@ button:focus {
 	vertical-align: baseline;
 }
 
+.attribution {
+	z-index: 1000;
+	position: fixed;
+	bottom: 6%;
+	padding-left: .5rem;
+	color: #444;
+	font-size: .9rem;
+}
+
+.credit a {
+	color: #666;
+	-webkit-transition: color ease 0.15s;
+	-moz-transition: color ease 0.15s;
+	transition: color ease 0.15s;
+}
+
+.credit a:hover {
+	color: #fff;
+}
+
 .container {
 	margin: 0 10%;
 	height: 100%;
@@ -188,13 +208,14 @@ button:focus {
 }
 
 .top-box, .bottom-box {
+	position: relative;
 	height: 50%;
 }
 
 .bottom-box {
-	position: relative;
 	bottom: 0;
 }
+
 
 .description {
 	position: relative;
@@ -282,17 +303,12 @@ button:focus {
 
 .caption {
 	height: 3em;
-	border: 1px solid #000;
-	background-color: #333;
-	border-radius: 3px;
-	box-shadow: 0 1px 0 rgba(255,255,255,0.16),inset 1px 1px rgba(255,255,255,0.12);
-	padding: 1em 1% 1em 0; 
 }
 
 .caption .fa-quote-left {
 	width: 20%;
 	text-align: center;
-	color: #666;
+	color: #fff;
 }
 
 .caption p {
@@ -304,44 +320,27 @@ button:focus {
 	transform: translateY(-50%);
 }
 
-.attribution {
-	z-index: 1000;
-	position: fixed;
-	bottom: 6%;
-	padding-left: .5rem;
-	color: #444;
-	font-size: .9rem;
-}
-
-.credit a {
-	color: #666;
-	-webkit-transition: color ease 0.15s;
-	-moz-transition: color ease 0.15s;
-	transition: color ease 0.15s;
-}
-
-.credit a:hover {
-	color: #fff;
-}
-
 .location-group {
-	border: 1px solid #000;
-	background-color: #333;
-	border-radius: 3px;
-	box-shadow: 0 1px 0 rgba(255,255,255,0.16),inset 1px 1px rgba(255,255,255,0.12);
+	position: relative;
+	top: 25%;
+}
+
+.caption {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .location {
-	padding: .5em 0;
 	border-bottom: 1px solid #000;
-	border-radius: 3px;
 	box-shadow: 0 1px 0 rgba(255,255,255,0.16);
+	height: 3rem;
 }
 
 .location .fa-map-marker {
 	width: 20%;
 	text-align: center;
-	color: #666;
+	color: #fff;
 }
 
 .location-text {
@@ -350,18 +349,13 @@ button:focus {
 	width: 80%;
 	position: relative;
 	top: 50%;
-	transform: translateY(50%);
-}
-
-hr {
-	padding: 0;
-	margin: 0;
+	transform: translateY(-50%);
 }
 
 #myMap {
 	position: relative;
-	width: 98%;
-	height: 270px;
+	width: 100%;
+	height: 300px;
 	margin: 0;
 	display: block;
 }
