--- a/css/styles.css
+++ b/css/styles.css
@@ -334,10 +334,15 @@ button:focus {
 }
 
 .caption {
-	height: 3em;
+	height: 3rem;
+	width: 100%;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .caption .fa-quote-left {
+	position: relative;
 	width: 20%;
 	text-align: center;
 	color: #444;
@@ -354,18 +359,13 @@ button:focus {
 
 .location-group {
 	position: relative;
-	top: 25%;
-}
-
-.caption {
-	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
 }
 
 .location {
-	border-bottom: 1px solid #000;
-	box-shadow: 0 1px 0 rgba(255,255,255,0.16);
+	/*border-bottom: 1px solid #000;
+	box-shadow: 0 1px 0 rgba(255,255,255,0.16);*/
 	height: 3rem;
 }
 
@@ -386,6 +386,7 @@ button:focus {
 
 #myMap {
 	position: relative;
+	transform: translateY(-50%);
 	width: 100%;
 	height: 300px;
 	margin: 0;
