added the location toggle, no functionality yet

--- a/css/styles.css
+++ b/css/styles.css
@@ -355,6 +355,7 @@ button:focus {
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
+	word-wrap: break-word;
 }
 
 .location-group {
@@ -382,6 +383,94 @@ button:focus {
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
+}
+
+.location-overlay-toggle {
+	height: 1rem;
+	text-align: center;
+}
+
+.location-overlay-toggle p {
+	display: inline-block;
+	vertical-align: top;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: .75rem;
+	color: #666;
+}
+
+.onoffswitch {
+    position: relative;
+    display: inline-block;
+    width: 3rem;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+    border-radius: .5rem;
+}
+.onoffswitch-inner {
+    display: block;
+    width: 200%;
+    margin-left: -100%;
+    -moz-transition: margin 0.15s ease 0s;
+    -webkit-transition: margin 0.15s ease 0s;
+    -o-transition: margin 0.15s ease 0s;
+    transition: margin 0.15s ease 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block;
+    float: left;
+    width: 50%;
+    height: 1rem;
+    line-height: 1rem;
+    font-size: .75rem;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "ON";
+    padding-left: .5rem;
+    background-color: #444;
+    color: #999;
+    text-align: left;
+}
+.onoffswitch-inner:after {
+    content: "OFF";
+    padding-right: .5rem;
+    background-color: #222;
+    color: #999;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block;
+    width: .5rem;
+    margin: .25rem;
+    background: #999;
+    border-radius: .5rem;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 2rem;
+    -moz-transition: all 0.15s ease 0s;
+    -webkit-transition: all 0.15s ease 0s;
+    -o-transition: all 0.15s ease 0s;
+    transition: all 0.15s ease 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0rem; 
 }
 
 #myMap {
