--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,6 @@ button:focus {
 /*	outline: 1px solid red;
 */	width: 20%;
 	vertical-align: middle;
-	/*border-bottom: .33rem solid #222;*/
 	height: 100%;
 }
 
@@ -125,7 +124,6 @@ button:focus {
 	width: 100%;
 	text-decoration: none;
 	color: inherit;
-	/*padding: .75rem 0 .42rem;*/
 	-webkit-transition: color ease 0.15s;
 	-moz-transition: color ease 0.15s;
 	transition: color ease 0.15s;
@@ -136,7 +134,7 @@ button:focus {
 }
 
 .nav-items i {
-	padding-right: .5rem;
+	padding-right: .5em;
 }
 
 .nav-items li:hover, .nav-items .selected, #twitter:hover {
@@ -147,7 +145,7 @@ button:focus {
 .nav-items li:after {
 	content: '';
 	position: absolute;
-	bottom: -0.0rem;
+	bottom: -0.0em;
 	left: 0;
 	height: 0px;
 	width: 100%;
@@ -157,16 +155,16 @@ button:focus {
 	transition: all ease 0.15s;
 }
 .nav-items li:hover:after {
-	height: .33rem;
+	height: .33em;
 	background: #fff;
 }
 
 .nav-items .selected:after {
 	content: '';
 	position: absolute;
-	bottom: -0.0rem;
+	bottom: -0.0em;
 	left: 0;
-	height: .33rem;
+	height: .33em;
 	width: 100%;
 	background: #fff;
 }
@@ -191,9 +189,9 @@ button:focus {
 	z-index: 1000;
 	position: fixed;
 	bottom: 6%;
-	padding-left: .5rem;
+	padding-left: .5em;
 	color: #444;
-	font-size: .9rem;
+/*	font-size: .9em;*/
 }
 
 .credit a {
@@ -208,7 +206,7 @@ button:focus {
 }
 
 .container {
-	margin: 0 10%;
+	margin: 0 5%;
 	height: 100%;
 }
 
@@ -256,8 +254,8 @@ button:focus {
 }
 
 .tagline {
-	font-size: 1.25rem;
-	margin-bottom: .75rem;
+	font-size: 1.25em;
+	margin-bottom: .75em;
 }
 
 .tagline a {
@@ -272,13 +270,13 @@ button:focus {
 }
 
 #text-divide {
-	font-size: .75rem;
+	font-size: .75em;
 	color: #fff;
 }
 
 .instructions {
 	/*text-align: justify;*/
-	margin-top: .75rem;
+	margin-top: .75em;
 }
 
 /*.instructions:after {
@@ -289,7 +287,7 @@ button:focus {
 
 .instructions li {
 	display: inline-block;
-	margin: 0 .66rem;
+	margin: 0 .33em;
 }
 
 .start {
@@ -298,8 +296,8 @@ button:focus {
 
 .start h1 {
 	display: inline-block;
-	font-size: 1.5rem;
-	padding: 1.5rem 3rem;
+	font-size: 1.5em;
+	padding: 1.5em 3em;
 	background-color: #fff;
 	color: #111;
 	border-radius: 10px;
@@ -310,7 +308,7 @@ button:focus {
 }
 
 .start p {
-	margin-top: .2rem;
+	margin-top: .2em;
 }
 
 .start p, .dark-mode {
@@ -334,7 +332,7 @@ button:focus {
 }
 
 .caption {
-	height: 3rem;
+	height: 3em;
 	width: 100%;
 	position: absolute;
 	top: 50%;
@@ -368,7 +366,7 @@ button:focus {
 .location {
 	/*border-bottom: 1px solid #000;
 	box-shadow: 0 1px 0 rgba(255,255,255,0.16);*/
-	height: 3rem;
+	height: 3em;
 }
 
 .location .fa-map-marker {
@@ -387,7 +385,7 @@ button:focus {
 }
 
 .location-overlay-toggle {
-	height: 1rem;
+	height: 1em;
 	text-align: center;
 	position: relative;
 	top: 3em;
@@ -405,7 +403,7 @@ button:focus {
 .onoffswitch {
     position: relative;
     display: inline-block;
-    width: 3rem;
+    width: 3em;
     -webkit-user-select:none;
     -moz-user-select:none;
     -ms-user-select: none;
@@ -419,7 +417,7 @@ button:focus {
     display: block;
     overflow: hidden;
     cursor: pointer;
-    border-radius: .5rem;
+    border-radius: .5em;
 }
 
 .onoffswitch-inner {
@@ -436,9 +434,9 @@ button:focus {
     display: block;
     float: left;
     width: 50%;
-    height: 1rem;
-    line-height: 1rem;
-    font-size: .75rem;
+    height: 1em;
+    line-height: 1em;
+    font-size: .75em;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -450,7 +448,7 @@ button:focus {
 
 .onoffswitch-inner:before {
     content: "ON";
-    padding-left: .5rem;
+    padding-left: .5em;
     background-color: #444;
     color: #999;
     text-align: left;
@@ -458,7 +456,7 @@ button:focus {
 
 .onoffswitch-inner:after {
     content: "OFF";
-    padding-right: .5rem;
+    padding-right: .5em;
     background-color: #222;
     color: #999;
     text-align: right;
@@ -466,14 +464,14 @@ button:focus {
 
 .onoffswitch-switch {
     display: block;
-    width: .5rem;
-    margin: .25rem;
+    width: .5em;
+    margin: .25em;
     background-color: #999;
-    border-radius: .5rem;
+    border-radius: .5em;
     position: absolute;
     top: 0;
     bottom: 0;
-    right: 2rem;
+    right: 2em;
     -moz-transition: all 0.15s ease 0s;
     -webkit-transition: all 0.15s ease 0s;
     -o-transition: all 0.15s ease 0s;
@@ -485,7 +483,7 @@ button:focus {
 }
 
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-    right: 0rem; 
+    right: 0em; 
 }
 
 .onoffswitch-label:hover .onoffswitch-inner:before, .onoffswitch-label:hover .onoffswitch-inner:after {
@@ -527,12 +525,12 @@ button:focus {
 	text-align: left;
 	width: 30%;
 	margin: 0 auto;
-	font-size: 1.25rem;
+	font-size: 1.25em;
 }
 
 .playlist-choices li {
 	position: relative;
-	padding: .33rem 0 .33rem .66rem;
+	padding: .33em 0 .33em .66em;
 	-webkit-transition: color ease 0.15s;
 	-moz-transition: color ease 0.15s;
 	transition: color ease 0.15s;
@@ -551,7 +549,7 @@ button:focus {
 	transition: all ease 0.15s;
 }
 .playlist-choices li:hover:before {
-	width: .33rem;
+	width: .33em;
 	background: #fff;
 }
 
@@ -566,7 +564,7 @@ button:focus {
 	bottom: 0;
 	left: 0;
 	height: 100%;
-	width: .33rem;
+	width: .33em;
 	background-color: #fff;
 }
 
@@ -581,7 +579,7 @@ button:focus {
 }
 
 .about-content p {
-	margin-bottom: 2rem;
+	margin-bottom: 2em;
 	line-height: 1.2;
 }
 
@@ -639,7 +637,7 @@ button:focus {
 }
 
 .volume, .music-pause-play, .music-next, .sc-logo {
-	width: 2.5rem;
+	width: 2.5em;
 	text-align: center;
 	-webkit-transition: color ease 0.15s;
 	-moz-transition: color ease 0.15s;
@@ -661,7 +659,7 @@ button:focus {
 }
 
 .music-data {
-	width: 25rem;
+	width: 25em;
 }
 
 .music-pause-play i, .music-next i, .music-text, .volume i {
@@ -712,17 +710,32 @@ button:focus {
 	box-shadow: -1px 0px 0 #000;
 	display: inline;
 	float: right;
-	font-size: 2rem;
+	font-size: 2em;
 	color: inherit;
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
 }
 
+/*ELEMENT QUERIES*/
+/*ELEMENT QUERIES*/
+/*ELEMENT QUERIES*/
 
+html .flexitem[max-width^='530px'] {
+	font-size: 12px;
+}
 
+html .flexitem[max-width^='571px'] {
+	font-size: 13px;
+}
 
+html .flexitem[max-width^='612px'] {
+	font-size: 14px;
+}
 
+html .flexitem[max-width^='652px'] {
+	font-size: 15px;
+}
 
 
 
