--- a/css/styles.css
+++ b/css/styles.css
@@ -103,9 +103,7 @@ button:focus {
 }
 
 .nav-items {
-	/*outline: 1px solid red;*/
 	width: 100%;
-	/*margin: 0 auto;*/
 	height: 100%;
 }
 
@@ -113,8 +111,7 @@ button:focus {
 	display: inline-block;
 	text-align: center;
 	position: relative;
-/*	outline: 1px solid red;
-*/	width: 20%;
+	width: 20%;
 	vertical-align: middle;
 	height: 100%;
 }
@@ -127,7 +124,6 @@ button:focus {
 	-webkit-transition: color ease 0.15s;
 	-moz-transition: color ease 0.15s;
 	transition: color ease 0.15s;
-	/*outline: 1px solid red;*/
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
@@ -138,7 +134,7 @@ button:focus {
 }
 
 .nav-items li:hover, .nav-items .selected, #twitter:hover {
-	color: #fff;
+	color: #fff!important;
 	cursor: pointer;
 }
 
@@ -434,8 +430,8 @@ button:focus {
     display: block;
     float: left;
     width: 50%;
-    height: 1em;
-    line-height: 1em;
+    height: 1rem;
+    line-height: 1rem;
     font-size: .75em;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -707,7 +703,6 @@ button:focus {
 .sc-logo {
 	width: 19%;
 	border-left: 1px solid rgba(255,255,255,0.16);
-	box-shadow: -1px 0px 0 #000;
 	display: inline;
 	float: right;
 	font-size: 2em;
@@ -721,12 +716,60 @@ button:focus {
 /*ELEMENT QUERIES*/
 /*ELEMENT QUERIES*/
 
-html .flexitem[max-width^='530px'] {
+html .flexitem[max-width^='438px'] {
 	font-size: 12px;
 }
 
-html .flexitem[max-width^='571px'] {
+.flexitem[max-width^='438px'] .container {
+	margin: 0 1%;
+}
+
+.flexitem[max-width^='438px'] .nav-items span  {
+	display: none;
+}
+
+.flexitem[max-width^='438px'] .music-data {
+	width: 15em;
+}
+
+.flexitem[max-width^='438px'] .playlist-choices {
+	width: 50%;
+}
+
+html .flexitem[max-width^='487px'] {
+	font-size: 12px;
+}
+
+.flexitem[max-width^='487px'] .container {
+	margin: 0 1%;
+}
+
+.flexitem[max-width^='487px'] .music-data {
+	width: 15em;
+}
+
+html .flexitem[max-width^='502px'] {
 	font-size: 13px;
+}
+
+.flexitem[max-width^='502px'] .container {
+	margin: 0 1%;
+}
+
+html .flexitem[max-width^='541px'] {
+	font-size: 13px;
+}
+
+.flexitem[max-width^='541px'] .container {
+	margin: 0 2.5%;
+}
+
+html .flexitem[max-width^='571px'] {
+	font-size: 14px;
+}
+
+.flexitem[max-width^='571px'] .container {
+	margin: 0 2.5%;
 }
 
 html .flexitem[max-width^='612px'] {
