--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@ body {
 
 .flexcontainer {
 	display: -webkit-flex;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	width: 100%;
 	height: 100%;
@@ -52,6 +54,7 @@ body {
 	width: 100%;
 	text-align: center;
 	opacity: 0;
+	filter: alpha(opacity=0);
 	-webkit-transition: opacity linear 0.15s;
 	-moz-transition: opacity linear 0.15s;
 	transition: opacity linear 0.15s;
@@ -59,6 +62,7 @@ body {
 
 .video-box:hover .video-controls {
 	opacity: 1;
+	filter: alpha(opacity=100);
 }
 
 button:focus {
@@ -87,11 +91,12 @@ button:focus {
 
 .flexitem {
 	-webkit-flex: 1;
-    flex: 1;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+	flex: 1;
     position: relative;
     height: 99.5vh;
-/*    outline: 1px solid red;
-*/}
+}
 
 .nav {
 	background-color: #222;
@@ -126,6 +131,8 @@ button:focus {
 	transition: color ease 0.15s;
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 
@@ -218,9 +225,8 @@ button:focus {
 
 .content-box {
 	height: 90%;
-/*	outline: 1px solid red;
-*/	position: relative;
-	top: -90%;
+	position: relative;
+	/*top: -90%;*/
 }
 
 .content-animation {
@@ -246,6 +252,8 @@ button:focus {
 .home-page .description {
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 
@@ -287,6 +295,8 @@ button:focus {
 }
 
 .start {
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 
@@ -323,6 +333,8 @@ button:focus {
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	-wekbit-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 	transform: translateX(-50%);
 	display: none;
 }
@@ -332,6 +344,8 @@ button:focus {
 	width: 100%;
 	position: absolute;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 
@@ -348,6 +362,8 @@ button:focus {
 	width: 80%;
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	word-wrap: break-word;
 }
@@ -355,6 +371,8 @@ button:focus {
 .location-group {
 	position: absolute;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	width: 100%;
 }
@@ -377,6 +395,8 @@ button:focus {
 	width: 80%;
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 
@@ -392,6 +412,8 @@ button:focus {
 	vertical-align: top;
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	color: #666;
 }
@@ -492,6 +514,8 @@ button:focus {
 
 #myMap {
 	position: relative;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	width: 100%;
 	height: 300px;
@@ -502,6 +526,8 @@ button:focus {
 .music-page .description {
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 
@@ -517,6 +543,8 @@ button:focus {
 }
 
 .playlist-choices {
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	text-align: left;
 	width: 30%;
@@ -571,6 +599,8 @@ button:focus {
 .about-content {
 	position: absolute;
 	bottom: 0;
+	-webkit-transform: translateY(50%);
+	-ms-transform: translateY(50%);
 	transform: translateY(50%);
 }
 
@@ -598,6 +628,8 @@ button:focus {
 .made {
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 	text-align: center;
 }
@@ -661,6 +693,8 @@ button:focus {
 .music-pause-play i, .music-next i, .music-text, .volume i {
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 
@@ -670,6 +704,7 @@ button:focus {
 	height: 100%;
 	background-size: 200% 100%;
 	background-position: 100% 0;
+	background-image: -webkit-linear-gradient(left, #444 50%, rgba(0,0,0,0) 50%);
 	background-image: linear-gradient(to right, #444 50%, rgba(0,0,0,0) 50%);
 }
 
@@ -709,6 +744,8 @@ button:focus {
 	color: inherit;
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 
