--- a/css/styles.css
+++ b/css/styles.css
@@ -33,9 +33,12 @@ body {
 }
 
 .video-hidden {
-	display: none;
+	/*display: none;*/
 	height: 100%;
 	width: 100%;
+	position: absolute;
+	top: 0;
+	z-index: -1000;
 }
 
 .location-overlay {
@@ -330,12 +333,13 @@ button:focus {
 }
 
 .dark-mode {
-	position: absolute;
+	position: relative;
 	top: 50%;
-	left: 50%;
+	text-align: center;
+	/*left: 50%;
 	-wekbit-transform: translateX(-50%);
 	-ms-transform: translateX(-50%);
-	transform: translateX(-50%);
+	transform: translateX(-50%);*/
 	display: none;
 }
 
